--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,12 @@ footer {
 	height: 300px;
 }
 
+header a img:hover {
+
+	transform: rotate(360deg);
+	transition: all 2s ease;
+}
+
 .logo2  {
 	display: none;
 	width: 300px;
